--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,12 @@
 @import "tailwindcss";
 
+/* small safety */
+html,
+body,
+#__next {
+  height: 100%;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
